[package]
name = "codext"
version = "0.1.0"
description = "CODEXT - Context Bundler"
authors = ["FDSE"]
edition = "2021"

[lib]
name = "codext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codext"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
encoding_rs = "0.8"
tiktoken-rs = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
